# openirl

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_TASKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF_CLEANUP_REPORT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  field_report.md
.github/workflows/: ci.yml  codeql.yml
apps/openirl-agent/: Cargo.toml
apps/openirl-agent/src/: main.rs
apps/openirl-agent/static/: index.html
apps/openirl-desktop/: Cargo.toml
apps/openirl-desktop/src/: main.rs
audit/: HANDOFF_AUDIT.md  handoff-audit.json
config/: openirl.example.toml
crates/openirl-alpha-validation/: Cargo.toml
crates/openirl-alpha-validation/src/: lib.rs
crates/openirl-artifacts/: Cargo.toml
crates/openirl-artifacts/src/: lib.rs
crates/openirl-auth/: Cargo.toml
crates/openirl-auth/src/: lib.rs
crates/openirl-config/: Cargo.toml
crates/openirl-config/src/: lib.rs
crates/openirl-core/: Cargo.toml
crates/openirl-core/src/: feature_plan.rs  lib.rs  models.rs
crates/openirl-desktop-shell/: Cargo.toml
crates/openirl-desktop-shell/src/: lib.rs
crates/openirl-diagnostics/: Cargo.toml
crates/openirl-diagnostics/src/: lib.rs
crates/openirl-field-validation/: Cargo.toml
crates/openirl-field-validation/src/: lib.rs
crates/openirl-health/: Cargo.toml
crates/openirl-health/src/: lib.rs
crates/openirl-installer/: Cargo.toml
crates/openirl-installer/src/: lib.rs
crates/openirl-metrics/: Cargo.toml
crates/openirl-metrics/src/: lib.rs
crates/openirl-obs/: Cargo.toml
crates/openirl-obs/src/: lib.rs
crates/openirl-onboarding/: Cargo.toml
crates/openirl-onboarding/src/: lib.rs
crates/openirl-production/: Cargo.toml
crates/openirl-production/src/: lib.rs
crates/openirl-profiles/: Cargo.toml
crates/openirl-profiles/src/: lib.rs
crates/openirl-qr/: Cargo.toml
crates/openirl-qr/src/: lib.rs
crates/openirl-relay-control/: Cargo.toml
crates/openirl-relay-control/src/: lib.rs
crates/openirl-release/: Cargo.toml
crates/openirl-release/src/: lib.rs
crates/openirl-scene-templates/: Cargo.toml
crates/openirl-scene-templates/src/: lib.rs
crates/openirl-session/: Cargo.toml
crates/openirl-session/src/: lib.rs
crates/openirl-v1/: Cargo.toml
crates/openirl-v1/src/: lib.rs
crates/openirl-vault/: Cargo.toml
crates/openirl-vault/src/: lib.rs
deploy/: docker-compose.relay.yml  mediamtx.openirl.yml  relay.Dockerfile
deploy/mediamtx/: openirl.mediamtx.yml
deploy/systemd/: openirl-agent.service
deploy/windows/: install-openirl-agent.ps1  openirl-agent.wxs
docs/: ARCHITECTURE.md  E2E_SMOKE_TEST.md  MAINTAINER_CHECKS.md  MIGRATION_GUIDE.md  OBS_AUTOMATION.md  PROTOCOLS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TEST_PLAN.md  VALIDATION.md
docs/features/: alpha-source-package.md  backup-ingest.md  bonding.md  brownout.md  dashboard.md  encoder-profiles.md  local-ingest.md  moderation.md  nat-tunnel.md  obs-output.md  obs-reconciliation.md  plugin-api.md  private-alpha-package.md  public-beta-security.md  security.md  self-hosted-relay.md  support-bundles.md  vertical-clips.md  webrtc-preview.md
docs/guides/: quickstart.md  relay.md
docs/hardware/: belabox.md  irl-pro.md  moblin.md
docs/runbooks/: ARTIFACT_EXPORT_ALPHA.md  MOBILE_FIELD_ALPHA.md  V1_PUBLIC_BETA.md  WINDOWS_OBS_ALPHA.md
docs/superpowers/iterations/: progress.md
docs/troubleshooting/: no-video.md
fixtures/alpha/: evidence-input.sample.json
fixtures/diagnostics/: output-health.sample.json
fixtures/field/: evidence-input.sample.json  field-evidence.sample.json  field-report.sample.json  mobile-field-report.sample.md
fixtures/metrics/: brownout-v2-scenarios.json  mediamtx.sample.prom
issue_templates/: bug_report.md  field_report.md
plugin/: openirl-plugin-manifest.schema.json
presets/encoders/: belabox-srtla2.json  irl-pro-srt.json  irl-pro-srtla.json  larix-srt.json  moblin-srt.json  moblin-srtla.json
presets/moderation/: default-policy.json
presets/obs/: backup-ingest-policy.json  openirl-v1-scene-template.json
presets/production/: vertical-scenes.json
presets/relay/: mediamtx.openirl.local.yml  srtla2-compat.json
presets/tunnels/: frp.example.toml  wireguard.example.conf
presets/webrtc/: whep-preview.json
reports/public-readiness/: index.html  public-launch-spec.md
scripts/: dev.ps1  dev.sh  static_validate.py
scripts/audit/: handoff_audit.py
scripts/field/: mediamtx-srt-field-smoke.ps1  mediamtx-srt-field-smoke.sh  mobile-field-evidence.ps1  mobile-field-evidence.sh
scripts/ingest/: backup-failover-smoke.sh  local-ingest-smoke.ps1  local-ingest-smoke.sh
scripts/mobile/: profile-compat-smoke.ps1  profile-compat-smoke.sh
scripts/obs/: reconcile-smoke.ps1  reconcile-smoke.sh
scripts/plugins/: validate-plugin-manifest.py
scripts/public-beta/: package-public-beta.ps1  package-public-beta.sh
scripts/relay/: self-hosted-relay-smoke.ps1  self-hosted-relay-smoke.sh  srtla2-compat-smoke.sh
scripts/security/: security-audit-smoke.py
scripts/smoke/: agent-alpha-smoke.sh  alpha-evidence.ps1  api_smoke.py  e2e-local-direct.ps1  e2e-local-direct.sh  mobile-field-evidence.ps1  mobile-field-evidence.sh  obs-websocket-smoke.ps1
scripts/support/: support-bundle-v2-smoke.sh
scripts/tunnels/: tunnel-readiness-smoke.ps1  tunnel-readiness-smoke.sh
scripts/webrtc/: webrtc-preview-smoke.ps1  webrtc-preview-smoke.sh
scripts/windows/: build-alpha-portable.ps1  package-msi.ps1
services/openirl-relay/: Cargo.toml
services/openirl-relay/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
