[workspace]
resolver = "3"
members = [
  "apps/openirl-agent",
  "apps/openirl-desktop",
  "services/openirl-relay",
  "crates/openirl-auth",
  "crates/openirl-alpha-validation",
  "crates/openirl-artifacts",
  "crates/openirl-config",
  "crates/openirl-core",
  "crates/openirl-desktop-shell",
  "crates/openirl-field-validation",
  "crates/openirl-diagnostics",
  "crates/openirl-health",
  "crates/openirl-installer",
  "crates/openirl-metrics",
  "crates/openirl-obs",
  "crates/openirl-onboarding",
  "crates/openirl-production",
  "crates/openirl-profiles",
  "crates/openirl-qr",
  "crates/openirl-scene-templates",
  "crates/openirl-relay-control",
  "crates/openirl-release",
  "crates/openirl-session",
  "crates/openirl-v1",
  "crates/openirl-vault",
  "xtask",
]
[workspace.package]
edition = "2024"
version = "0.1.0-alpha.0"
license = "Apache-2.0 OR MIT"
repository = "https://example.invalid/openirl/openirl-rust-kit"
homepage = "https://example.invalid/openirl"
authors = ["OpenIRL Contributors"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
rand = "0.8"
qrcode = "0.14"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "process", "io-util"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
