[package]
name = "openirl-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
openirl-desktop-shell = { path = "../../crates/openirl-desktop-shell" }
serde_json.workspace = true

[lints]
workspace = true
