[package]
name = "openirl-field-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-core = { path = "../openirl-core" }
serde.workspace = true
time.workspace = true

[lints]
workspace = true
