[package]
name = "openirl-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-core = { path = "../openirl-core" }
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
