[package]
name = "openirl-obs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
obs-websocket = []

[dependencies]
uuid.workspace = true
tokio-tungstenite.workspace = true
sha2.workspace = true
serde_json.workspace = true
futures-util.workspace = true
base64.workspace = true
async-trait.workspace = true
openirl-core = { path = "../openirl-core" }
openirl-scene-templates = { path = "../openirl-scene-templates" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
