[package]
name = "openirl-onboarding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-config = { path = "../openirl-config" }
openirl-core = { path = "../openirl-core" }
openirl-profiles = { path = "../openirl-profiles" }
openirl-qr = { path = "../openirl-qr" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
