[package]
name = "openirl-production"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-core = { path = "../openirl-core" }
serde.workspace = true
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
