[package]
name = "openirl-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-core = { path = "../openirl-core" }
openirl-vault = { path = "../openirl-vault" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
