[package]
name = "openirl-v1"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
openirl-config = { path = "../openirl-config" }
openirl-core = { path = "../openirl-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[lints]
workspace = true
