[package]
name = "openirl-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
base64.workspace = true

[lints]
workspace = true
